modify stm32-ads1118 page

--- a/source/_posts/stm32-ads1118.md
+++ b/source/_posts/stm32-ads1118.md
@@ -157,8 +157,7 @@ float ads1118_get_temperature(void)
 }
 　　```
 
-ADS1118默认开启ADC模式，通过配置寄存器的12-14bit可以选择开启哪个通道，具体可参考手册。另外关于片内温度模式时，使用的是14bit左对齐模式。而且ADS1118的转换结果中，负数使用二进制补码格式，因此需要做一个转换，每个值代表0.03125℃
-关于详细的代码可参考[mygithub](https://github.com/StevenShiChina/stm32-ads1118)，测试中的SPI通信数据：
+ADS1118默认开启ADC模式，通过配置寄存器的12-14bit可以选择开启哪个通道，具体可参考手册。另外关于片内温度模式时，使用的是14bit左对齐模式。而且ADS1118的转换结果中，负数使用二进制补码格式，因此需要做一个转换，每个值代表0.03125℃，测试中的SPI通信数据：
 
 ![](stm32-ads1118/spi.png)
 
