modify about page

--- a/source/_posts/stm32-ads1118.md
+++ b/source/_posts/stm32-ads1118.md
@@ -227,6 +227,6 @@ uint16_t ads1118_get_differential_0_1(uint8_t PGA)
 	return   adc;
 }
 　　```
-实际测试时，温度精度在2摄氏度左右，并没有达到TI官方公布的精度，在硬件电路方面有待进一步提高。全部源码后续会放出，您也可以通过打赏9.9的方式快速获取源码，近期打赏朋友较多，为方便区分请打赏时在留言中附上邮箱地址。
+实际测试时，温度精度在2摄氏度左右，并没有达到TI官方公布的精度，在硬件电路方面有待进一步提高。全部源码后续会放出。
 
 
